<resources>
    <string name="app_name">kenCalculator</string>
    <string name="reset">⟳</string>
    <string name="divide">÷</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num6">6</string>
    <string name="num5">5</string>
    <string name="multiply">⨯</string>
    <string name="num4">4</string>
    <string name="minus">−</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="add">+</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="percentage">%</string>
    <string name="del">⌫</string>
    <string name="_1_x">1/x</string>
    <string name="zero">0</string>
</resources>