<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05014a"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="307.5dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/reset"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/displayCalculation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text=""
        android:maxLength="23"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/displayCalculationAnswer"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:text="@string/zero"
        android:maxLength="10"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="70sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearEntry"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#C1500202"
            android:text="@string/ce"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clearAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#C1500202"
            android:text="@string/c"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#533407"
            android:text="@string/percentage"
            android:textColor="#FFFFFF"
            android:textSize="35sp"

            />

        <Button
            android:id="@+id/backspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#C1500202"
            android:text="@string/del"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/squareRoot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#533407"
            android:text="√"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <Button
            android:id="@+id/square"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#533407"
            android:text="x²"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <Button
            android:id="@+id/divideByX"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#533407"
            android:text="@string/_1_x"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />

        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#533407"
            android:text="@string/divide"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/num7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/num7"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/num8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/num8"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/num9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/num9"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/multiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#533407"
            android:text="@string/multiply"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/num4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/num4"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/num5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/num5"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/num6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/num6"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/subtraction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#533407"
            android:text="@string/minus"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/num1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/num1"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/num2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/num2"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/num3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/num3"
            android:textSize="40sp"
            android:backgroundTint="#00FFFFFF"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/addition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#533407"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plusMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#AB433535"
            android:text="±"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/num0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#00000000"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#AB433535"
            android:text="."
            android:textColor="#FFFFFF"
            android:textSize="40sp" />

        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#533407"
            android:text="="
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>
</LinearLayout>